@@ -1,0 +1,4 @@
+usr/bin/@UNISON_SELF@                 usr/bin/@UNISON_SELF_ALTERNATIVE@
+usr/bin/@UNISON_SELF@                 usr/bin/@UNISON_SELF_VERSIONNO@
+usr/share/man/man1/@UNISON_SELF@.1.gz usr/share/man/man1/@UNISON_SELF_ALTERNATIVE@.1.gz 
+usr/share/man/man1/@UNISON_SELF@.1.gz usr/share/man/man1/@UNISON_SELF_VERSIONNO@.1.gz 
