@@ -1,0 +1,15 @@
+#!/bin/sh -e
+
+# This file is common between unison and unison-gtk package
+if @IS_GTK@; then
+  update-alternatives --install /usr/bin/unison-gtk unison-gtk /usr/bin/@UNISON_GTK_ALTERNATIVE@ @PRIORITY@ \
+    --slave /usr/share/man/man1/unison-gtk.1.gz unison-gtk.1.gz /usr/share/man/man1/@UNISON_GTK_ALTERNATIVE@.1.gz 
+
+  update-alternatives --install /usr/bin/unison unison /usr/bin/@UNISON_GTK_ALTERNATIVE@ @PRIORITY@ \
+    --slave /usr/share/man/man1/unison.1.gz unison.1.gz /usr/share/man/man1/@UNISON_GTK_ALTERNATIVE@.1.gz 
+else
+  update-alternatives --install /usr/bin/unison unison /usr/bin/@UNISON_ALTERNATIVE@ @PRIORITY@ \
+    --slave /usr/share/man/man1/unison.1.gz unison.1.gz /usr/share/man/man1/@UNISON_ALTERNATIVE@.1.gz 
+fi
+
+#DEBHELPER#
