@@ -1,0 +1,7 @@
+#!/bin/sh -e
+
+if [ "$1" = "remove" ]; then
+	update-alternatives --remove unison /usr/bin/@UNISON_SELF_ALTERNATIVE@
+fi
+
+#DEBHELPER#
