@@ -1,4 +1,0 @@
-usr/bin
-usr/share/doc
-usr/share/man/man1
-etc/bash_completion.d
