@@ -1,9 +1,0 @@
-#!/bin/sh -e
-
-update-alternatives --install /usr/bin/unison-gtk unison-gtk /usr/bin/@UNISON_GTK_ALTERNATIVE@ @PRIORITY@ \
-  --slave /usr/share/man/man1/unison-gtk.1.gz unison-gtk.1.gz /usr/share/man/man1/@UNISON_GTK_ALTERNATIVE@.1.gz 
-
-update-alternatives --install /usr/bin/unison unison /usr/bin/@UNISON_GTK_ALTERNATIVE@ @PRIORITY@ \
-  --slave /usr/share/man/man1/unison.1.gz unison.1.gz /usr/share/man/man1/@UNISON_GTK_ALTERNATIVE@.1.gz 
-
-#DEBHELPER#
