@@ -1,4 +1,0 @@
-usr/bin/@UNISON@                 usr/bin/@UNISON_ALTERNATIVE@
-usr/bin/@UNISON@                 usr/bin/@UNISON_VERSIONNO@
-usr/share/man/man1/@UNISON@.1.gz usr/share/man/man1/@UNISON_ALTERNATIVE@.1.gz 
-usr/share/man/man1/@UNISON@.1.gz usr/share/man/man1/@UNISON_VERSIONNO@.1.gz 
