@@ -1,12 +1,0 @@
-#!/bin/sh -e 
-
-case "$1" in
-  upgrade)
-    if dpkg --compare-versions "$2" lt "2.13.16-1" && dpkg --compare-versions "$2" ge "2.10.2-1"; then
-      echo "Deleting alternatives to unison2.10.2"
-      update-alternatives --remove unison /usr/bin/unison2.10.2
-    fi
-  ;;
-esac
-
-#DEBHELPER#
