@@ -1,7 +1,0 @@
-#!/bin/sh -e
-
-if [ "$1" = "remove" ]; then
-	update-alternatives --remove unison /usr/bin/@UNISON_ALTERNATIVE@
-fi
-
-#DEBHELPER#
